--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.16.4",
+    "next": "14.0.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-icons": "^4.11.0",
+    "react-responsive": "^9.0.2",
+    "react-table": "^7.8.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "eslint": "^8",
