--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-responsive": "^9.0.2",
     "react-table": "^7.8.0",
